--- a/source/_posts/万年历是如何计算的.md
+++ b/source/_posts/万年历是如何计算的.md
@@ -1,7 +1,7 @@
 ---
 title: 万年历是如何计算的
 date: 2019-07-01 14:17:43
-tags: [探索与发现 , python]
+tags: [探索与发现 , python, 算法]
 typora-root-url: ../
 ---
 
@@ -27,7 +27,7 @@ month_week_festival =["05020 母亲节", "06030 母亲节"]
 
 #### 闰年
 
-为了弥补自传和公转的插值，保证每一年的同一天地球在公转轨道上的位置大致相同（否则会出现今年的12月冬天，500年后成了夏天的奇怪情况），就产生了闰年，其规则为每400年有97个闰年，四年一闰，百年不闰，四百年再闰。用代码来表达:
+为了弥补自传和公转的插值，保证每一年的同一天地球在公转轨道上的位置大致相同（否则会出不同年的同一天所在的季节一直在变化），就产生了闰年，其规则为每400年有97个闰年，四年一闰，百年不闰，四百年再闰。用代码来表达:
 
 ```python
 # 判断公元纪年是否为闰年
@@ -76,7 +76,7 @@ def zeller(year: int, month: int, day: int):
 
 #### 农历日期
 
-农历实际上没有非常强的规律性，它的定义是依赖天文观测值推算的，因此通常存储当前前后一百多年的观测/推算值作为农历数据，对于更远的年份采用估算，当然就不是很准确。
+农历实际上没有非常强的规律性，它的定义是依赖天文观测值推算的，因此通常存储当前前后一百多年的观测/推算值作为农历数据，因此，所谓万年历是假的，大多数只能查询1900-2049这段时间的农历日期。
 
 个人认为，这其实就是中国传统天文历法的缺陷性，没有追求对天体规律的研究，观测只是手段，而把天象当作凶吉之兆，真是非常可惜的。要知道，西方文明对于天体运动的精确观测和规律的研究对牛顿提出万有引力定律和力学定律产生了直接的影响（再说牛顿被苹果砸想出万有引力定律的拖出去枪毙五分钟），从此我们知道了天上的星星和地上的人遵循着同样的运行规则。我们的文明智慧是不差的，点错了科技树实在是可惜啊。
 
@@ -86,23 +86,108 @@ def zeller(year: int, month: int, day: int):
 - 中间12位，即4bit，每位代表一个月，为1则为大月，为0则为小月。
 - 最后4位，即8，代表这一年的润月月份，为0则不润。首4位要与末4位搭配使用
 
+初始条件：1900年1月31日为农历春节
+
+当前日期和初始日期的间隔来得到具体是农历年月日以及是否为闰月
+
+```python
+from datetime import datetime, timedelta
+
+lunar_info = [0x04bd8,0x04ae0,0x0a570,0x054d5,0x0d260,0x0d950,0x16554,0x056a0,0x09ad0,0x055d2,
+  0x04ae0,0x0a5b6,0x0a4d0,0x0d250,0x1d255,0x0b540,0x0d6a0,0x0ada2,0x095b0,0x14977,
+  0x04970,0x0a4b0,0x0b4b5,0x06a50,0x06d40,0x1ab54,0x02b60,0x09570,0x052f2,0x04970,
+  0x06566,0x0d4a0,0x0ea50,0x06e95,0x05ad0,0x02b60,0x186e3,0x092e0,0x1c8d7,0x0c950,
+  0x0d4a0,0x1d8a6,0x0b550,0x056a0,0x1a5b4,0x025d0,0x092d0,0x0d2b2,0x0a950,0x0b557,
+  0x06ca0,0x0b550,0x15355,0x04da0,0x0a5d0,0x14573,0x052d0,0x0a9a8,0x0e950,0x06aa0,
+  0x0aea6,0x0ab50,0x04b60,0x0aae4,0x0a570,0x05260,0x0f263,0x0d950,0x05b57,0x056a0,
+  0x096d0,0x04dd5,0x04ad0,0x0a4d0,0x0d4d4,0x0d250,0x0d558,0x0b540,0x0b5a0,0x195a6,
+  0x095b0,0x049b0,0x0a974,0x0a4b0,0x0b27a,0x06a50,0x06d40,0x0af46,0x0ab60,0x09570,
+  0x04af5,0x04970,0x064b0,0x074a3,0x0ea50,0x06b58,0x055c0,0x0ab60,0x096d5,0x092e0,
+  0x0c960,0x0d954,0x0d4a0,0x0da50,0x07552,0x056a0,0x0abb7,0x025d0,0x092d0,0x0cab5,
+  0x0a950,0x0b4a0,0x0baa4,0x0ad50,0x055d9,0x04ba0,0x0a5b0,0x15176,0x052b0,0x0a930,
+  0x07954,0x06aa0,0x0ad50,0x05b52,0x04b60,0x0a6e6,0x0a4e0,0x0d260,0x0ea65,0x0d530,
+  0x05aa0,0x076a3,0x096d0,0x04bd7,0x04ad0,0x0a4d0,0x1d0b6,0x0d250,0x0d520,0x0dd45,
+  0x0b5a0,0x056d0,0x055b2,0x049b0,0x0a577,0x0a4b0,0x0aa50,0x1b255,0x06d20,0x0ada0]
+#1900年的农历正月初一
+first_lunar_day = datetime(1900, 1, 31)
+
+# 获取一个农历年有多少天
+def sum_days(offset):
+  info = lunar_info[offset]
+  # 获取月份信息
+  month_info = (info & 0x0ffff) >> 4
+  big_month_count = 0
+  # 循环计数有多少位二进制1，如果对以下操作不太明白 可以看下这个内容 
+  # https://blog.csdn.net/qq_34342154/article/details/77873713
+  while month_info != 0:
+    month_info = month_info & (month_info-1)
+    big_month_count += 1
+  days = 29 * 12 + big_month_count
+  # 如果有闰月
+  if (info & 0x0000f) > 0:
+    # 闰月是否为大月
+    if (info & 0x10000) > 0:
+      days += 30
+    else:
+      days += 29
+  return days
+
+# 获取在指定年之前有多少天
+def sum_days_of_lunar_year(year):
+  sum = 0
+  len = year - 1900
+  for offset in range(0,len):
+    sum += sum_days(offset)
+  return sum
+
+# 获取在指定年之前有多少天
+def lunar_str(year, month, day):
+  interval_days = (datetime(year, month, day) - first_lunar_day).days + 1
+  print('interval_days',interval_days)
+  sum = 0
+  year_offset = 0
+  while True:
+    temp = sum + sum_days(year_offset)
+    year_offset += 1
+    if temp >= interval_days:
+      break
+    sum = temp
+  info = lunar_info[year_offset]  # 所在年的信息
+  rest_days = interval_days - sum  # 还剩下多少天没有计算
+  month = 0
+  month_info = (info & 0x0ffff) >> 4
+  leap_month = info & 0x0000ff
+  # months = 13 if leap_month > 0 else 12
+  days = 0
+  for i in range(0,12):
+    temp = days
+    if (0x800 >> i) & month_info > 0: # 是大月
+      temp += 30
+    else:
+      temp += 29
+    if temp >= rest_days:
+      month = i + 1
+      break
+    days = temp
+    if i > 0 and i == leap_month:
+      temp += 30 if (info & 0x10000) > 0 else 29  # 闰月是大月还是小月
+    if temp >= rest_days:
+      month = "闰"+ (i + 1)
+      break
+    days = temp
+  day = rest_days - days
+  return (year_offset-1, month, day)
 ```
-0x04bd8,0x04ae0,0x0a570,0x054d5,0x0d260,0x0d950,0x16554,0x056a0,0x09ad0,0x055d2,
-0x04ae0,0x0a5b6,0x0a4d0,0x0d250,0x1d255,0x0b540,0x0d6a0,0x0ada2,0x095b0,0x14977,
-0x04970,0x0a4b0,0x0b4b5,0x06a50,0x06d40,0x1ab54,0x02b60,0x09570,0x052f2,0x04970,
-0x06566,0x0d4a0,0x0ea50,0x06e95,0x05ad0,0x02b60,0x186e3,0x092e0,0x1c8d7,0x0c950,
-0x0d4a0,0x1d8a6,0x0b550,0x056a0,0x1a5b4,0x025d0,0x092d0,0x0d2b2,0x0a950,0x0b557,
-0x06ca0,0x0b550,0x15355,0x04da0,0x0a5d0,0x14573,0x052d0,0x0a9a8,0x0e950,0x06aa0,
-0x0aea6,0x0ab50,0x04b60,0x0aae4,0x0a570,0x05260,0x0f263,0x0d950,0x05b57,0x056a0,
-0x096d0,0x04dd5,0x04ad0,0x0a4d0,0x0d4d4,0x0d250,0x0d558,0x0b540,0x0b5a0,0x195a6,
-0x095b0,0x049b0,0x0a974,0x0a4b0,0x0b27a,0x06a50,0x06d40,0x0af46,0x0ab60,0x09570,
-0x04af5,0x04970,0x064b0,0x074a3,0x0ea50,0x06b58,0x055c0,0x0ab60,0x096d5,0x092e0,
-0x0c960,0x0d954,0x0d4a0,0x0da50,0x07552,0x056a0,0x0abb7,0x025d0,0x092d0,0x0cab5,
-0x0a950,0x0b4a0,0x0baa4,0x0ad50,0x055d9,0x04ba0,0x0a5b0,0x15176,0x052b0,0x0a930,
-0x07954,0x06aa0,0x0ad50,0x05b52,0x04b60,0x0a6e6,0x0a4e0,0x0d260,0x0ea65,0x0d530,
-0x05aa0,0x076a3,0x096d0,0x04bd7,0x04ad0,0x0a4d0,0x1d0b6,0x0d250,0x0d520,0x0dd45,
-0x0b5a0,0x056d0,0x055b2,0x049b0,0x0a577,0x0a4b0,0x0aa50,0x1b255,0x06d20,0x0ada0
+
+运行结果
+
 ```
+print(lunar_str(2001,3,24))
+
+(101, 2, 30) # 可以根据101取模获得天干地支纪年，农历2月30日
+```
+
+
 
 #### 二十四节气
 
@@ -119,9 +204,7 @@ sTermInfo = [0, 21208, 42467, 63836, 85337, 107014, 128867, 150921, 173149, 1955
 
 上面已经说过一个公转回归年为365.2422天即 525948.768分钟，由于节气均不在元旦日期附近，即使由于闰年相差一两天也不会跨年，直接以年份和基准节气时间（本例中的1900年1月6日 2:05:00AM）的间隔*525948.768 数加上当前节气时间间隔数便是本年24节气的精确时间。
 
-#### 干支纪年
 
-未完待续
 
 
 
