删除无用文件

--- a/source/_posts/万年历是如何计算的.md
+++ b/source/_posts/万年历是如何计算的.md
@@ -62,22 +62,24 @@ def zeller(year: int, month: int, day: int):
     :param year:  年
     :param month: 月
     :param day:   日
-    :return: 星期； w对7取模得：0-星期日，1-星期一，2-星期二，3-星期三，4-星期四，5-星期五，6-星期六
+    :return: 0-星期日，1-星期一，2-星期二，3-星期三，4-星期四，5-星期五，6-星期六
     """
     # 在蔡勒公式中，某年的1、2月要看作上一年的13、14月来计算，比如2019年1月1日要看作2018年的13月1日来计算
     if month < 3:
         m = month + 12
         year = year - 1
-        if 
     else:
         m = month
+    # 公元前1年和公元元年(1年)相邻，没有0年
+    if year == 0:
+        year = -1
     y = year % 100  # 取年的后两位
     # 世纪 取已经经过的世纪，即20xx取20而不是21世纪
     c = (year - y) / 100
     # 注意，如果年份是公元前的年份且非整百数的话，c应该等于所在世纪的编号，如公元前253年，是公元前3世纪
     if c < 0 and y != 0:
         c -= 1
-    return (y + int(y/4)+int(c/4)-2*c+int(26*(m+1)/10)+day-1)%7
+    return (y + int(y / 4) + int(c / 4) - 2 * c + int(26 * (m + 1) / 10) + day - 1) % 7
 ```
 
 ### 农历
