--- a/source/_posts/万年历是如何计算的.md
+++ b/source/_posts/万年历是如何计算的.md
@@ -33,11 +33,11 @@ typora-root-url: ../
 至于宜忌，(・∀・(・∀・(・∀・*)，我觉得我写的是一篇科普向的文章，封建迷信就算了吧，据我所知，程序对这种内容八成是随机生成的，或者爬黄历网站的数据，然而还有人相信，权当自我安慰吧。
 
 ### 公历
-公历是一种太阳历，即以地球绕日公转为基础制定的历法。以地球自转一周为一天，一年有365.2422天（回归年，历法基本以回归年为基准，横行年和回归年有小的差别，和地球自转轴的摆动有关）。
+公历是一种太阳历，即以地球绕日公转为基础制定的历法。以地球自转一周为一天，一年有365.2422天（回归年，历法基本以回归年为基准，回归年以太阳直射地球的纬度的回归周期计算，恒星年（以地球在公转轨道的位置回归周期计算）和回归年有小的差别，因为地球自转轴是在摆动的）。
 
 #### 闰年
 
-为了弥补自传和公转的插值，保证每一年的同一天地球在公转轨道上的位置大致相同（否则会出不同年的同一天所在的季节一直在变化），就产生了闰年，其规则为每400年有97个闰年，四年一闰，百年不闰，四百年再闰。用代码来表达:
+为了弥补自传和公转的插值，保证每一年的同一天太阳直射地球的纬度大致相同（否则会出不同年的同一天所在的季节一直在变化），就产生了闰年，其规则为每400年有97个闰年，四年一闰，百年不闰，四百年再闰。用代码来表达:
 
 ```python
 # 判断公元纪年是否为闰年
